syntax = "proto3";

package chess;
option java_package = "proto";
option java_multiple_files = true;

enum ChessPieceType {
  KING = 0;
  QUEEN = 1;
  ROOK = 2;
  BISHOP = 3;
  KNIGHT = 4;
  PAWN = 5;
}

enum ChessColor {
  BLACK = 0;
  WHITE = 1;
}

message ChessPiece {
  ChessPieceType type = 1;
  ChessColor color = 2;
}

message Location {
  int32 x = 1;
  int32 y = 2;
}

message PieceWithLocation {
  ChessPiece piece = 1;
  Location location = 2;
}

message SaveGame {
  ChessColor current_player = 1;
  repeated PieceWithLocation pieces = 2;
  bool w_00_castling = 3;
  bool w_70_castling = 4;
  bool b_07_castling = 5;
  bool b_77_castling = 6;
}